--- a/src/blocks/header/__text/header__text.css
+++ b/src/blocks/header/__text/header__text.css
@@ -1,6 +1,6 @@
 .header__text{
-    width: 53px;
-    top: 51px;
+
+
     font-family: Inter;
     font-style: normal;
     font-weight: normal;
@@ -9,10 +9,13 @@
     text-align: right;
     color: #FFFFFF;
     padding-bottom: 41px;
+    display: flex;
+    gap: 24px;
 }
 @media all and (max-width:900px) {
     .header__text {
 
         padding-top: 28px;
+        flex-direction: column;
     }
 }
