--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 @import url(./blocks/header/header.css);
 @import url(./blocks/header/__logo/header__logo.css);
 @import url(./blocks/header/__text/header__text.css);
+@import url(./blocks/header/__link/header__link.css);
 @import url(./blocks/content/content.css);
 @import url(./blocks/profile/profile.css);
 @import url(./blocks/profile/__avatar/profile__avatar.css);
